--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
           <!-- Right: Image -->
           <div class="about-right">
-            <img src="images/" alt="Profile Photo">
+            <img src="images/Profile_Pic.png" alt="Profile Photo">
           </div>
       
         </div>
